--- a/index.html
+++ b/index.html
@@ -1,65 +1,104 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<!DOCTYPE HTML>
+<html lang="en">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<head>
+    <meta charset="utf-8">
+    <title>Home</title>
+    <script src="scripts/jquery-1.9.1.js"></script>
+    <script src='scripts/jquery-ui-1.10.3.custom.min.js'></script>
+    <script src="scripts/lightbox-2.6.min.js"></script>
+    <script src="scripts/masonry.pkgd.min.js"></script>
+    <script src="scripts/waypoints.min.js"></script>
+    <script src="scripts/generic.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="lightbox.css" rel="stylesheet">
+    <link rel="stylesheet" href="jquery.mCustomScrollbar.css">
+</head>
 
-    <title>Ngozi Harrison by ValiantVeritas</title>
-  </head>
+<body>
+    <div id="main">
 
-  <body>
 
-    <header>
-      <div class="container">
-        <h1>Ngozi Harrison</h1>
-        <h2></h2>
 
-        <section id="downloads">
-          <a href="https://github.com/ValiantVeritas" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <div class="container" id="intro">
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1 style="padding-top : 10%">NGOZI HARRISON</h1>
+            <br>
+            <h3>[ Greetings I am a teenage Graphic Designer & Front End Developer with a particular interest in User Interfaces / User Experience]
+            </h3>
+        </div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <br>
+        <div class="line" id="my-work-line"></div>
+        <br>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <div class="container" id="portfolio" style="background : #262829">
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <h4 style=" padding: 10%; color: rgb(111, 111, 111) ">Here is some of my work.</h4>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+            <a href="portfolio/Lifttinc logo.png" data-lightbox="portfolio" title="My caption">
+                <img class="img" style=" width: 20% " src="portfolio/Lifttinc logo.png">
+            </a>
+            <a href="portfolio/GGG_logo.png" data-lightbox="portfolio">
+                <img class="img " style=" width: 20% " src="portfolio/GGG_logo.png">
+            </a>
+            <a href="portfolio/i'm%20not%20too%20bright%20copy.png" data-lightbox="portfolio">
+                <img class="img " style=" width: 20% " src="portfolio/i'm%20not%20too%20bright%20copy.png">
+            </a>
+            <a>
+                <img src="portfolio/">
+            </a>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        <br>
+        <div class="line" id="me-line"></div>
+        <br>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+        <div class="container" id="me">
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+
+        </div>
     </div>
 
-    
-  </body>
+
+    <div id="topbar">
+        <div style="padding-left : 5%" id="nav">
+            <ul>
+                <li>
+                    <a href="#intro" id="link_intro">
+                        <h3>INTRO </h3>
+                    </a>
+                </li>
+                <li style="color:rgb(144, 144, 144)">
+                    <h3>/</h3>
+                </li>
+                <li>
+                    <a href="#my-work-line">
+                        <h3>MY WORK</h3>
+                    </a>
+                </li>
+                <li style="color:rgb(144, 144, 144)">
+                    <h3>/</h3>
+                </li>
+                <li>
+                    <a href="#me-line">
+                        <h3>ME</h3>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+
+</body>
+
 </html>
