Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
 
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -46,16 +46,16 @@
 
       <section id="main_content">
         <h2>
-<a name="hello-friend" class="anchor" href="#hello-friend"><span class="octicon octicon-link"></span></a>Hello Friend!</h2>
+<a id="hello-friend" class="anchor" href="#hello-friend" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello Friend!</h2>
 
-<p>My name is Ngozi [en-GO-zee] Harrison. I am a teenager who builds ideas using technology to make life a little bit easier and more fun! I have always been fascinated by technology. Everyday I learn something new about how technology works. My particular interests are:  Web development, Data Analysis and Visualization, Graphic design, Information Architecture and Mathematics.</p>
+<p>My name is Ngozi [en-GO-zee] Harrison. I am a teenager who builds ideas using technology to make life a little bit easier and more fun! I have always been fascinated by technology. Everyday I learn something new about how technology works. My particular interests are:  Computer Science, Data Analysis and Visualization, Graphic design, Information Architecture and Mathematics.</p>
 
 <h4>
-<a name="you-can-find-my-main-website-at-ngoziportfolioboxme" class="anchor" href="#you-can-find-my-main-website-at-ngoziportfolioboxme"><span class="octicon octicon-link"></span></a>You can find my main website at <a href="ngozi.portfoliobox.me">ngozi.portfoliobox.me</a>
+<a id="you-can-find-my-main-website-at-ngoziportfolioboxme" class="anchor" href="#you-can-find-my-main-website-at-ngoziportfolioboxme" aria-hidden="true"><span class="octicon octicon-link"></span></a>You can find my main website at <a href="ngozi.portfoliobox.me">ngozi.portfoliobox.me</a>
 </h4>
 
 <h4>
-<a name="you-can-also-find-me-on-quora-at-quoracomngozi-harrison" class="anchor" href="#you-can-also-find-me-on-quora-at-quoracomngozi-harrison"><span class="octicon octicon-link"></span></a>You can also find me on Quora at <a href="quora.com/Ngozi-Harrison">quora.com/Ngozi-Harrison</a>
+<a id="you-can-also-find-me-on-quora-at-quoracomngozi-harrison" class="anchor" href="#you-can-also-find-me-on-quora-at-quoracomngozi-harrison" aria-hidden="true"><span class="octicon octicon-link"></span></a>You can also find me on Quora at <a href="quora.com/Ngozi-Harrison">quora.com/Ngozi-Harrison</a>
 </h4>
       </section>
 
@@ -67,7 +67,7 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
       </footer>
 
