Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,74 +3,46 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Ngozi Harrison by ValiantVeritas</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/ValiantVeritas">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Ngozi Harrison</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <header>
+      <div class="container">
+        <h1>Ngozi Harrison</h1>
+        <h2></h2>
 
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
+        <section id="downloads">
+          <a href="https://github.com/ValiantVeritas" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
       </div>
+    </header>
 
-
-      <span class="banner-fix"></span>
-
-
+    <div class="container">
       <section id="main_content">
         <h2>
-<a id="hello-friend" class="anchor" href="#hello-friend" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello Friend!</h2>
+<a id="hello-friend" class="anchor" href="#hello-friend" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello Friend!</h2>
 
-<p>My name is Ngozi [en-GO-zee] Harrison. I am a teenager who builds ideas using technology to make life a little bit easier and more fun! I have always been fascinated by technology. Everyday I learn something new about how technology works. My particular interests are:  Computer Science, Data Analysis and Visualization, Graphic design, Information Architecture and Mathematics.</p>
+<p>My name is Ngozi Harrison. I build ideas using technology for the purpose of improving life while also being socially responsible. I have always been fascinated by systems in the world and everyday I learn something new about how things work. I am particularly interested in Network Science, Economics and Finance, Data Analysis and Visualization, Graphic design, Urban Science and Mathematics.</p>
 
 <h4>
-<a id="you-can-find-my-main-website-at-ngoziportfolioboxme" class="anchor" href="#you-can-find-my-main-website-at-ngoziportfolioboxme" aria-hidden="true"><span class="octicon octicon-link"></span></a>You can find my main website at <a href="ngozi.portfoliobox.me">ngozi.portfoliobox.me</a>
+<a id="you-can-find-my-main-website-at-ngoziportfolioboxme" class="anchor" href="#you-can-find-my-main-website-at-ngoziportfolioboxme" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You can find my main website at <a href="ngozi.portfoliobox.me">ngozi.portfoliobox.me</a>
 </h4>
 
 <h4>
-<a id="you-can-also-find-me-on-quora-at-quoracomngozi-harrison" class="anchor" href="#you-can-also-find-me-on-quora-at-quoracomngozi-harrison" aria-hidden="true"><span class="octicon octicon-link"></span></a>You can also find me on Quora at <a href="quora.com/ngozi-harrison">quora.com/ngozi-harrison</a>
+<a id="you-can-also-find-me-on-quora-at-quoracomngozi-harrison" class="anchor" href="#you-can-also-find-me-on-quora-at-quoracomngozi-harrison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You can also find me on Quora at <a href="quora.com/ngozi-harrison">quora.com/ngozi-harrison</a>
+</h4>
+
+<h4>
+<a id="you-can-find-me-on-linkedin-at-ngozi-harrison" class="anchor" href="#you-can-find-me-on-linkedin-at-ngozi-harrison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You can find me on LinkedIn at <a href="linkedin.com/in/ngozi-harrison-abaa9b102">Ngozi Harrison</a>
 </h4>
       </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/ValiantVeritas">ValiantVeritas</a> can be found on <a href="https://github.com/ValiantVeritas">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
     </div>
 
     
